app-test/testdata/typesystem/neg/type-comparison-list-type-with-any-type/src/cmp.cal
namespace cmp:
    actor ListTypeWithAnyType() ==> bool OUT:
        do
            OUT <-- [1, 2, 3] = false; // error
            OUT <-- [1, 2, 3] = [1, 2, 3, 4]; // error
        end
    end
end